[OFE-433] - Updated content, removed quotations, and fixed overflowing text on the benefit section

--- a/_sass/_blocks.scss
+++ b/_sass/_blocks.scss
@@ -2677,6 +2677,7 @@ Salary Tracker
     border: 1px solid #1D214F;
     height: 200px;
     font-size: 18px;
+    overflow-y: auto;
 }
 
 .salary-tracker-picker {
@@ -2763,6 +2764,10 @@ Salary Tracker
 }
 
 @media only screen and (max-width: 1024px) {
+    .salary-tracker-bracket-col {
+        flex: 0 0 100%;
+    }
+    
     .jobs-tracker-link-container {
         flex-direction: column;
         flex-wrap: wrap;
